[package]
name = "multishot"
# When incrementing version and releasing to crates.io:
# - Update crate version in README.md
# - Update CHANGELOG.md
# - Update if necessary copyright notice in LICENSE-MIT
# - Create a "vX.Y.Z" git tag
version = "0.3.0"
authors = ["Serge Barral <serge.barral@asynchronics.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asynchronics/multishot"
readme = "README.md"
description = """
An async, lock-free, reusable channel for sending single values to asynchronous tasks.
"""
categories = ["asynchronous", "concurrency"]
keywords = ["async", "channel", "oneshot", "reusable", "futures"]

[dev-dependencies]
pollster = "0.3"

[target.'cfg(multishot_loom)'.dependencies]
loom = "0.5"
